--- a/apm/k8s/python/tools/autogen/python-autogen.yaml
+++ b/apm/k8s/python/tools/autogen/python-autogen.yaml
@@ -1,43 +1,73 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: py-autogen
+  name: redis
   labels:
-    app: py-autogen
+    app: redis
 spec:
-  type: ClusterIP
   selector:
-    app: py-autogen
+    app: redis
   ports:
   - port: 6379
     targetPort: 6379
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: redis
+spec:
+  selector:
+    matchLabels:
+      app: redis
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: redis
+    spec:
+      containers:
+      - name: redis
+        image: docker.io/stevelsplunk/splk-python-autogen
+        ports:
+        - containerPort: 6379
+        env:
+        - name: TZ
+          value: America/New_York
+        command: ["/bin/sh"]
+        args: ["run-server.sh"]
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: py-autogen
-  labels:
-    app: py-autogen
 spec:
-  containers:
-  - name: py-autogen
-    image: docker.io/stevelsplunk/splk-python-autogen
-    ports:
-    - containerPort: 6379
-    env:
-    - name: TZ
-      value: America/New_York
-    - name: OTEL_RESOURCE_ATTRIBUTES
-      value: environment=otel-demo
-    - name: SPLUNK_SERVICE_NAME
-      value: python-autogen-otel
-    - name: MY_NODE_NAME
-      valueFrom:
-        fieldRef:
-          apiVersion: v1
-          fieldPath: spec.nodeName
-    - name: OTEL_EXPORTER_JAEGER_ENDPOINT
-      value: http://$(MY_NODE_NAME):9080/v1/trace
-    command: ["/bin/sh"]
-    args: ["run-autogen.sh"]
-    imagePullPolicy: Always
+  selector:
+    matchLabels:
+      app: py-autogen
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: py-autogen
+    spec:
+      containers:
+      - name: py-autogen
+        image: docker.io/stevelsplunk/splk-python-autogen
+        ports:
+        - containerPort: 6379
+        env:
+        - name: TZ
+          value: America/New_York
+        - name: OTEL_RESOURCE_ATTRIBUTES
+          value: environment=otel-demo
+        - name: SPLUNK_SERVICE_NAME
+          value: python-autogen-otel
+        - name: MY_NODE_NAME
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: spec.nodeName
+        - name: OTEL_EXPORTER_JAEGER_ENDPOINT
+          value: http://$(MY_NODE_NAME):9080/v1/trace
+        command: ["/bin/sh"]
+        args: ["run-autogen.sh"]
